--- a/src/assignment2.ipynb
+++ b/src/assignment2.ipynb
@@ -57,6 +57,7 @@
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "import os\n",
+    "import getpass\n",
     "from pyspark.sql import SparkSession\n",
     "from utilities import SEED\n",
     "from utilities import PA2Test\n",
@@ -86,14 +87,14 @@
     "    product_processed_filename = data_cat.product_processed_filename\n",
     "    ml_features_train_filename = data_cat.ml_features_train_filename\n",
     "    ml_features_test_filename = data_cat.ml_features_test_filename\n",
-    "    output_root = '/home/{}-pa2/test_results'.format(PID)\n",
+    "    output_root = '/home/{}/{}-pa2/test_results'.format(getpass.getuser(), PID)\n",
     "    test_results_root = data_cat.test_results_root\n",
     "    pid = PID\n",
     "\n",
     "pa2 = PA2Executor(args, input_format=INPUT_FORMAT)\n",
     "data_io = pa2.data_io\n",
     "data_dict = pa2.data_dict\n",
-    "begin = time.time()"
+    "begin = time.time()\n"
    ]
   },
   {
